# aoc2021

./: Cargo.toml
data/: eleven.input  one.input
src/: account_key  main.rs
src/day/: eight.rs  eleven.rs  fifteen.rs  five.rs  four.rs  fourteen.rs  mod.rs  nine.rs  one.rs  seven.rs  seventeen.rs  six.rs  sixteen.rs  ten.rs  thirteen.rs  three.rs  twelve.rs  two.rs
