[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bitvec = "1.0.1"
colored = "2"
lazy_static = "1"
regex = "1"
structopt = "0.3"
thiserror = "1"

[profile.release]
lto = true
opt-level = "z"
